# lunarsky

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.ci/: environment.yml
.github/workflows/: .testsuite.yaml.swp  auto_assign.yml  pypirelease.yaml  testsuite.yaml
ci/: cache_kernels.py  linting.yaml  tests.yaml
lunarsky/: __init__.py  _core.pyx  kernel_manager.py  mcmf.py  moon.py  sky_coordinate.py  spice_utils.py  time.py  topo.py
lunarsky/tests/: __init__.py  conftest.py  test_moon.py  test_sky_coordinate.py  test_spice.py  test_time.py  test_topo.py  test_transforms.py
lunarsky/tests/data/: spice_fixtures.npz
